# WordTraining

./: CMakeLists.txt  Main.qml  database.cpp  database.h  listmodel.cpp  listmodel.h  main.cpp  settingsmanager.cpp  settingsmanager.h  utils.cpp  utils.h
Items/: ButtonItem.qml  CheckBoxItem.qml  LetterItem.qml  LetterStatisticsItem.qml  TextAreaItem.qml  TextFieldItem.qml
Pages/: GuessWordPage.qml  ListWordsPage.qml  SettingsPage.qml  StatisticsWordPage.qml  WordEditorPage.qml
UnitTests/CoreTester/: CMakeLists.txt  testcore.cpp
UnitTests/UITester/: CMakeLists.txt  main.cpp  tst_testui.qml
android/: AndroidManifest.xml  gradle.properties
